--- a/style-sass-output.css
+++ b/style-sass-output.css
@@ -94,6 +94,10 @@ body {
     color: white; }
   #what * em {
     color: white; }
+  #what h1 {
+    text-align: center;
+    font-size: 26px;
+    font-weight: 600; }
 
 /*
  * _how-frame.scss
@@ -392,7 +396,8 @@ footer {
 /* And that's the mixin game. */
 /*** Let's play with fonts! */
 h1 {
-  font-size: 40px; }
+  font-size: 40px;
+  line-height: 1.35; }
 
 h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase; }
@@ -458,7 +463,8 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 14pt;
   margin-top: 0;
   margin-bottom: 0;
-  background-color: white; }
+  background-color: white;
+  font-weight: 300; }
 
 .frame-footer {
   min-height: 110px;
